--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/jquery-ui-1.10.3.min.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<script src="js/jquery-1.10.2.min.js"></script>
+		<!--<script src="js/jquery-1.10.2.min.js"></script>-->
+		<script src="js/jquery-1.10.2.js"></script>
 		<script src="js/jquery-ui-1.10.3.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/abbm.js"></script>
